--- a/install
+++ b/install
@@ -1,5 +1,6 @@
 #!/bin/bash
 
-ln -s .config/dotfiles/bashrc ~/.bashrc
+ln -sf .config/dotfiles/bashrc ~/.bashrc
+ln -sf .config/dotfiles/jshintrc ~/.jshintrc
 ln -sf .config/dotfiles/vim ~/.vim
 ln -sf dotfiles/vim ~/.config/nvim
