--- a/install
+++ b/install
@@ -2,5 +2,6 @@
 
 ln -sf .config/dotfiles/bashrc ~/.bashrc
 ln -sf .config/dotfiles/jshintrc ~/.jshintrc
+ln -sf .config/dotfiles/gitconfig ~/.gitconfig
 ln -sf .config/dotfiles/vim ~/.vim
 ln -sf dotfiles/vim ~/.config/nvim
