--- a/install
+++ b/install
@@ -3,5 +3,5 @@
 ln -sf .config/dotfiles/bashrc ~/.bashrc
 ln -sf .config/dotfiles/jshintrc ~/.jshintrc
 ln -sf .config/dotfiles/gitconfig ~/.gitconfig
-ln -sf .config/dotfiles/vim ~/.vim
-ln -sf dotfiles/vim ~/.config/nvim
+ln -sfT .config/dotfiles/vim ~/.vim
+ln -sfT dotfiles/vim ~/.config/nvim
